widget/gtk/MozContainerWayland.h
@@ -77,8 +77,7 @@ void moz_container_wayland_add_initial_draw_callback(
     MozContainer* container, const std::function<void(void)>& initial_draw_cb);
 wl_surface* moz_gtk_widget_get_wl_surface(GtkWidget* aWidget);
 void moz_container_wayland_update_opaque_region(MozContainer* container,
-                                                bool aSubtractCorners,
-                                                bool aFullScreen);
+                                                bool aSubtractCorners);
 gboolean moz_container_wayland_can_draw(MozContainer* container);
 
 #endif /* __MOZ_CONTAINER_WAYLAND_H__ */
