widget/gtk/nsWindow.h
@@ -88,16 +88,6 @@ class CurrentX11TimeGetter;
 
 }  // namespace mozilla
 
-class OpaqueRegionState {
- public:
-  OpaqueRegionState() : mRect({-1, -1, -1, -1}), mSubtractedCorners(false){};
-  bool NeedsUpdate(GdkRectangle& aNewRect, bool aNewSubtractedCorners);
-
- private:
-  GdkRectangle mRect;
-  bool mSubtractedCorners;
-};
-
 class nsWindow final : public nsBaseWidget {
  public:
   typedef mozilla::gfx::DrawTarget DrawTarget;
@@ -229,6 +219,8 @@ class nsWindow final : public nsBaseWidget {
   gboolean OnPropertyNotifyEvent(GtkWidget* aWidget, GdkEventProperty* aEvent);
   gboolean OnTouchEvent(GdkEventTouch* aEvent);
 
+  void UpdateTopLevelOpaqueRegion();
+
   virtual already_AddRefed<mozilla::gfx::DrawTarget> StartRemoteDrawingInRegion(
       LayoutDeviceIntRegion& aInvalidRegion,
       mozilla::layers::BufferMode* aBufferMode) override;
@@ -332,8 +324,6 @@ class nsWindow final : public nsBaseWidget {
   virtual void SetTransparencyMode(nsTransparencyMode aMode) override;
   virtual nsTransparencyMode GetTransparencyMode() override;
   virtual void SetWindowMouseTransparent(bool aIsTransparent) override;
-  virtual void UpdateOpaqueRegion(
-      const LayoutDeviceIntRegion& aOpaqueRegion) override;
   virtual nsresult ConfigureChildren(
       const nsTArray<Configuration>& aConfigurations) override;
   nsresult UpdateTranslucentWindowAlphaInternal(const nsIntRect& aRect,
@@ -501,12 +491,6 @@ class nsWindow final : public nsBaseWidget {
   void ClearCachedResources();
   nsIWidgetListener* GetListener();
 
-#ifdef MOZ_WAYLAND
-  void UpdateTopLevelOpaqueRegionWayland(bool aSubtractCorners);
-#endif
-  void UpdateTopLevelOpaqueRegionGtk(bool aSubtractCorners);
-  void UpdatePopupOpaqueRegion(const LayoutDeviceIntRegion& aOpaqueRegion);
-
   nsWindow* GetTransientForWindowIfPopup();
   bool IsHandlingTouchSequence(GdkEventSequence* aSequence);
 
@@ -657,9 +641,6 @@ class nsWindow final : public nsBaseWidget {
   // to force update mBounds after a size state change from a configure
   // event.
   bool mBoundsAreValid;
-
-  // Used to track opaque region changes for toplevel windows.
-  OpaqueRegionState mToplevelOpaqueRegionState;
 
   static bool DragInProgress(void);
 
